adding countries list

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Rest Country API</title>
+    <script src='app.js'></script>
   </head>
   <body>
-    <h1>Hello!</h1>
+    <h1>Countries</h1>
+      <select id='countries-select'></select>
   </body>
 </html>
