adding info display for each country

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Countries</h1>
       <select id='countries-select'></select>
+      <div id="country-info-holder"></div>
   </body>
 </html>
