--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Rest Country API</title>
     <script src='app.js'></script>
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
   </head>
   <body>
     <h1>Countries</h1>
