adding please select options and bordering country html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   </head>
   <body>
     <h1>Countries</h1>
-      <select id='countries-select'></select>
+      <select id='countries-select'>
+        <option value="" disabled selected>Select a country</option>
+      </select>
       <div id="country-info-holder"></div>
+
+    <h3>Bordering Countries</h3>
+      <select id='bordering-countries-select'>
+        <option value="" disabled selected>Select a bordering country</option>
+      </select>
+      <div id="bordering-country-info-holder"></div>
   </body>
 </html>
