--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Rest Country API</title>
+    <script src='https://maps.googleapis.com/maps/api/js'></script>
     <script src='app.js'></script>
+    <script src='map_wrapper.js'></script>
     <link rel="stylesheet" type="text/css" href="styles.css"/>
   </head>
   <body>
@@ -17,5 +19,7 @@
       <select id='bordering-countries-select'>
       </select>
       <div id="bordering-country-info-holder"></div>
+    <div id='map-container'></div>
+
   </body>
 </html>
