--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
   </head>
   <body>
     <h1>Countries</h1>
-      <select id='countries-select'>
-        <option value="" disabled selected>Select a country</option>
-      </select>
-      <div id="country-info-holder"></div>
+    <div id="main-container">
+      <div id="tools-holder">
 
-    <h3>Bordering Countries</h3>
-      <select id='bordering-countries-select'>
-      </select>
-      <div id="bordering-country-info-holder"></div>
-    <div id='map-container'></div>
+        <select id='countries-select'>
+          <option value="" disabled selected>Select a country</option>
+        </select>
+        <div id="country-info-holder"></div>
 
+        <h3>Bordering Countries</h3>
+        <select id='bordering-countries-select'>
+        </select>
+        <div id="bordering-country-info-holder"></div>
+      </div>
+
+      <div id='map-container'></div>
+    </div>
   </body>
 </html>
