adding better title and refactoring

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css"/>
   </head>
   <body>
-    <h1>Countries</h1>
+    <h1>Best Countries Explorer</h1>
     <div id="main-container">
       <div id="tools-holder">
 
